# sal-torch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SAL_LICENSE_OPERATIONS.md  SAL_ROADMAP_V3.md  SAL_TORCH_DESIGN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture_support.md  getting_started.md  how_sal_works.md  licensing.md
examples/: compare_with_without_sal.py  full_control.py  quickstart.py  standalone_fi.py
sal/: __init__.py  arch_support.py  callback.py  compare.py  config.py  drift.py  fi.py  guard.py  license.py  masker.py  plasticity.py  report.py  scanner.py  trainer.py  visualize.py
scripts/: modal_integration_test.py  modal_run_examples.py  modal_v020_test.py  modal_v030_test.py  validate_published_results.py
tests/: conftest.py  test_arch_integration.py  test_compare.py  test_config.py  test_drift.py  test_fi.py  test_guard.py  test_license.py  test_masker.py  test_plasticity.py  test_training_integration.py  test_visualize.py
